# HW24.1

./: pyproject.toml
config/: settings.py  urls.py
materials/: models.py  views.py
materials/migrations/: 0001_initial.py  0002_initial.py  0003_remove_course_author.py
users/: models.py
users/migrations/: 0001_initial.py
